lib/stdio/stdio.h

//generated by gpt-5.6<noreply@openai.com> @ codex
//可选的正式 stdio 接口。

#ifndef SHYOS_STDIO_H
#define SHYOS_STDIO_H

#include <stdarg.h>
#include "shy_type.h"

#ifdef __cplusplus
extern "C" {
#endif

i32 putchar(i32 c);
i32 getchar(void);

i32 printf(const char *fmt, ...);
i32 vprintf(const char *fmt, va_list ap);

i32 scanf(const char *fmt, ...);
i32 vscanf(const char *fmt, va_list ap);

i32 sprintf(char *buf, const char *fmt, ...);
i32 snprintf(char *buf, usize n, const char *fmt, ...);
i32 vsnprintf(char *buf, usize n, const char *fmt, va_list ap);

#ifdef __cplusplus
}
#endif

#endif /* SHYOS_STDIO_H */