lib/stdio/lib.rs

//generated by gpt-5<noreply@openai.com> @ codex
//正式 stdio 的 no_std Rust FFI。

#![no_std]

use core::ffi::{c_char, c_int};
use core::fmt::{self, Write};

unsafe extern "C" {
    pub safe fn putchar(c: c_int) -> c_int;
    pub safe fn getchar() -> c_int;

    pub fn printf(fmt: *const c_char, ...) -> c_int;
    pub fn scanf(fmt: *const c_char, ...) -> c_int;

    pub fn sprintf(buf: *mut c_char, fmt: *const c_char, ...) -> c_int;
    pub fn snprintf(buf: *mut c_char, n: usize, fmt: *const c_char, ...) -> c_int;
}

struct Stdout;

impl Write for Stdout {
    fn write_str(&mut self, value: &str) -> fmt::Result {
        for byte in value.bytes() {
            putchar(byte as c_int);
        }
        Ok(())
    }
}

#[doc(hidden)]
pub fn _print(args: fmt::Arguments) {
    let _ = Stdout.write_fmt(args);
}

#[macro_export]
macro_rules! print {
    ($($arg:tt)*) => {
        $crate::_print(core::format_args!($($arg)*))
    };
}

#[macro_export]
macro_rules! println {
    () => {
        $crate::_print(core::format_args!("\n"))
    };
    ($($arg:tt)*) => {
        $crate::_print(core::format_args!("{}\n", core::format_args!($($arg)*)))
    };
}
